Deleted .suo from repo, added starter level

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=905E69C34203B14362A934BC23701CB9
+CopyrightNotice=Copyright 2018 Clinton Kunhardt
+ProjectName=UE4Tutorial
 
 [StartupActions]
 bAddPacks=True
